# protobuf_service

./: CMakeLists.txt  dynamic_client.cc  server.cc  static_client.cc
cmake/: protobuf-generated.cmake
rpclib/: rbus_rpc_channel.cc  rbus_rpc_channel.h  rbus_rpc_controller.cc  rbus_rpc_controller.h  rbus_rpc_server.cc  rbus_rpc_server.h  rdk_rpc.proto
services/: wifi.proto  wifi_service.cc  wifi_service.h
